# 212_final_project2

./: .gitignore  README.md  Useful Commands.txt  tags.yaml
corona_ws/: module1.launch  module2.launch  module3.launch  table_calibration.launch  websocket.launch
corona_ws/src/express/: app.js  package-lock.json  package.xml
corona_ws/src/express/public/css/: 1.css
corona_ws/src/express/public/html/: 1.html  2.html  3.html  table.html
corona_ws/src/express/public/js/: 2_deprecated.js  js_update.py  voxels.js
corona_ws/src/express/public/js/utils/: arc3pt.js  draw_spring.js
corona_ws/src/express/public/text/: 2.txt  2deprecated.txt  4.txt
corona_ws/src/express/sslcert/: ia.key
corona_ws/sslcert/: .rnd  ia.crt  ia2.crt  ia2.key  req.cnf
express/: .rnd  CMakeLists.txt  package.json
express/public/audio/: make_speech.py
express/public/css/: 2.css  3.css
express/public/html/: 4.html  voxels.html
express/public/js/: 1.js  2.js  3.js  4.js  table.js  template.js
express/public/js/utils/: draw_ball.js  draw_bar.js
express/public/text/: 1.txt  3.txt
express/routes/: audio.js
ur_object_detection/: CMakeLists.txt  package.xml
ur_object_detection/scripts/: bottle_detection_edited.py
ur_pick_and_place/: CMakeLists.txt  package.xml
ur_pick_and_place/scripts/: move_group_python_interface_tutorial.py  move_group_python_interface_tutorial_gripper_template.py  move_group_python_ur_pickplace.py
ur_teleop/: CMakeLists.txt  package.xml
ur_teleop/scripts/: ur_teleop_keyboard_cmds.py
user_input/src/: aprilTagController.py  keyboard_process2.py  (+3 more)
(+1 files in other folders)
